# imooc_agent

./: .env.example  .flake8  .gitignore  kmTravel.html  langchain_framework.md  main.py  note.md  pyproject.toml  test_create_directory.py  test_env_config.py  test_powershell.py  tt.py
.temp/: amap.html  index.html  snake_game.py
app/bailian/: agent_tool_call.py  agent_tool_call_with_parsers.py  amap_mcp_agent.py  company_website_creator.py  company_website_creator_classic.py  company_website_creator_new_agent.py  company_website_creator_stategraph.py  demo_multi_turn.py  math_mcp_client_sse.py  math_mcp_client_stdio.py  math_mcp_client_streamable_http.py  math_mcp_server.py  multi_turn_conversation.py
app/code_agent/agent/: agent_multi_turn_conversation.py  code_agent.py  code_agent_diagrams.md  multi_turn_conversation.py
app/code_agent/mcp/: rag.py
app/code_agent/rag/: rag.py
app/code_agent/tools/: file_saver.py  file_tools.py  powershell_tools.py  rag_tools.py  shell_tools.py  terminal_tools.py  test_tools.py
app/code_agent/utils/: mcp.py
app/mcp/stdio/: file_tools.py  mcp_github_client.py  mcp_playwright_client.py  mcp_playwright_client_v2.py  powershell_tools.py  powershell_tools2.py  shell_tools.py  terminal_tools.py  test.md  test.py
app/ollama/: langchain_ollama_chat_test.py  langchain_ollama_stream_chat_test.py
data/conversations/demo/session/: session_1ae06172-f674-4dc3-a57e-1f9ab4eec325.json  (+1 more)
data/conversations/session/: session_3ad31b2c-e17b-4bd1-b7c4-9bec0f963bb6.json  session_40f923f4-38fe-462c-844c-4c1a786e0341.json  session_45f0898c-949a-4573-bd2b-bebc8943efb4.json  session_47e8c2c6-45a0-45dd-839a-301a71b304f1.json  session_5839aeb5-4ea2-46be-ae6f-ae80b9935474.json  session_7765a79e-35a0-4122-b64d-524a5c042b9c.json  session_9ead8b87-6100-495e-ab74-bc93a20bf614.json  session_b7f359d0-a148-4c41-9229-2d575c8304dd.json  session_be65be57-5147-43b8-a238-393cf498648b.json  session_c650bc58-d442-4a68-b78a-0d78c79a6343.json
docs/: LangChain 1.2.4 依赖导入分析.md  agent_development_flow.md  amap_mcp_agent_doc.md  bailian_tool_call_flow.md  integrated_architecture.md  langchain_prompts_core.md  mcp_connection_guide.md  note.md  note_optimized.md  多轮对话.md  多轮对话_agent工具调用.md  多轮对话_持久化存储.md  阿里云百炼知识库API接入.md  阿里云百炼知识库接入&查询.md
tests/: test_shell_tools.py
