[project]
name = "imooc-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.4",
    "langchain-core==1.2.7",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"  # 主镜像源（国内优先用清华源）
extra-index-url = ["https://pypi.org/simple"]           # 备用镜像源（主源不可用时兜底）
